--- a/docs/partials/navbar.html
+++ b/docs/partials/navbar.html
@@ -1,8 +1,7 @@
-
 <div>
 	<ul id="slide-out" class="side-nav fixed z-depth-0">
 		<li>
-			<img class="heartLogo" src="../images/logo.png">
+			<img class="heartLogo" src="image/logo.png">
 		</li>
 		<li>
 			<h2 class="center-align titleInNav specialFont">{{view}}</h2>
