--- a/docs/partials/splash.html
+++ b/docs/partials/splash.html
@@ -1,8 +1,7 @@
-
 <div class="splash">
 	<div class="row splashRow valign-wrapper">
 		<div class="col m4 offset-m1">
-			<img class="splashLogo" src="../images/logo.png">
+			<img class="splashLogo" src="image/logo.png">
 		</div>
 		<div class="col m7">
 			<div class="row">
